# rpg-vtt

./: .gitignore  AGENTS.md  Cargo.toml  NEXT_PHASES.md  README.md
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  DiceRoller.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
content-loader/: Cargo.toml  README.md
content-loader/src/: content_node.rs  data_types.rs  error.rs  lib.rs  loader.rs  manifest.rs  ruleset_file.rs
content-loader/tests/: character_slice.rs
content-packs/dnd5e-core/: manifest.json  ruleset.json
content-packs/dnd5e-core/classes/: wizard.json
content-packs/dnd5e-core/features/: human_ability_score_increase.json
content-packs/dnd5e-core/items/: component_pouch.json  dagger.json  gauntlets_of_ogre_power.json
content-packs/dnd5e-core/monsters/: goblin.json
content-packs/dnd5e-core/races/: human.json
content-packs/dnd5e-core/spells/: fire_bolt.json  mage_hand.json  magic_missile.json  shield.json
dice-engine/: Cargo.toml  README.md
dice-engine/src/: ast.rs  context.rs  error.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs  policy.rs  result.rs  rng.rs
engine-core/: Cargo.toml  README.md
engine-core/src/: attribute.rs  effect.rs  engine.rs  entity.rs  error.rs  lib.rs  rule.rs
persistence-sqlite/: Cargo.toml  README.md
persistence-sqlite/src/: error.rs  lib.rs  store.rs
src/: evaluator.rs  lexer.rs  lib.rs  parser.rs
